[gd_scene load_steps=17 format=2]

[ext_resource path="res://export_combat/Combat.tscn" type="PackedScene" id=1]
[ext_resource path="res://export_combat/Gui/SkillWindow.tscn" type="PackedScene" id=2]
[ext_resource path="res://export_combat/UIcontainerOnly.tscn" type="PackedScene" id=3]
[ext_resource path="res://export_combat/Assets/CombatBG/bg_combact2/IMG_5336.png" type="Texture" id=4]
[ext_resource path="res://export_combat/TurnNext.gd" type="Script" id=5]
[ext_resource path="res://export_combat/Assets/CombatBG/bg_combact2/IMG_5335.png" type="Texture" id=6]
[ext_resource path="res://Music/loop3.mp3" type="AudioStream" id=7]
[ext_resource path="res://export_combat/Gui/PauseMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://export_combat/Gui/Assets/borderbox.png" type="Texture" id=9]
[ext_resource path="res://export_combat/Gui/UICombat.gd" type="Script" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="GDScript" id=2]
script/source = "extends AnimatedSprite

func _ready():
	self.play(\"default\")
"

[sub_resource type="GDScript" id=3]
script/source = "extends Node

# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	 var jobs : Array


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="Animation" id=4]

[sub_resource type="Animation" id=5]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath("Black:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "menu"
length = 3.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="CombatContainer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.947, 0 )
frames = SubResource( 1 )
centered = false
script = SubResource( 2 )

[node name="Black" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1076.0
color = Color( 0, 0, 0, 1 )

[node name="Combat" parent="." instance=ExtResource( 1 )]

[node name="TurnNext" type="Node" parent="Combat"]
script = ExtResource( 5 )

[node name="HBoxContainer" parent="." instance=ExtResource( 3 )]

[node name="SkillWindow" parent="." instance=ExtResource( 2 )]
visible = false

[node name="PauseMenu" parent="." instance=ExtResource( 8 )]
visible = false

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 9 )

[node name="Take_datas" type="Node" parent="."]
script = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]

[node name="CombatMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[node name="Fade" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/fade = SubResource( 5 )
anims/menu = SubResource( 6 )
