[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/OldWizard.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/bg_combact2/IMG_5335.png" type="Texture" id=2]
[ext_resource path="res://export_combat/Gui/UICombat.gd" type="Script" id=3]
[ext_resource path="res://export_combat/Gui/Assets/borderbox.png" type="Texture" id=4]
[ext_resource path="res://export_combat/Gui/PauseMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://export_combat/Gui/SkillWindow.tscn" type="PackedScene" id=6]
[ext_resource path="res://export_combat/Gui/SkillsScripts/buttonAttack.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=6]
size = 70
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://Assets/BetterPixels.ttf"

[sub_resource type="DynamicFont" id=3]
size = 70
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 10 )

[node name="UICombat" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -399, 122 )
mouse_filter = 1
script = ExtResource( 3 )

[node name="test" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 696.0
custom_constants/separation = 70

[node name="InputWindow" type="MarginContainer" parent="HBoxContainer"]
margin_right = 656.0
margin_bottom = 384.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.55
custom_constants/margin_right = 9
custom_constants/margin_left = 25
custom_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="HBoxContainer/InputWindow"]
modulate = Color( 1, 1, 1, 0.588235 )
margin_left = 25.0
margin_right = 647.0
margin_bottom = 364.0
custom_styles/panel = SubResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/InputWindow"]
margin_left = 25.0
margin_right = 647.0
margin_bottom = 364.0
custom_constants/separation = 20
alignment = 1

[node name="Attack" type="Button" parent="HBoxContainer/InputWindow/VBoxContainer"]
margin_top = 55.0
margin_right = 622.0
margin_bottom = 126.0
rect_min_size = Vector2( 0, 70 )
custom_colors/font_color_hover = Color( 0.662745, 0.027451, 0.666667, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
text = " Attack"
script = ExtResource( 7 )

[node name="Skills" type="Button" parent="HBoxContainer/InputWindow/VBoxContainer"]
margin_top = 146.0
margin_right = 622.0
margin_bottom = 217.0
rect_min_size = Vector2( 0, 70 )
custom_colors/font_color_hover = Color( 0.662745, 0.027451, 0.666667, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
text = " Skills"

[node name="Defend" type="Button" parent="HBoxContainer/InputWindow/VBoxContainer"]
margin_top = 237.0
margin_right = 622.0
margin_bottom = 308.0
rect_min_size = Vector2( 0, 70 )
custom_colors/font_color_hover = Color( 0.662745, 0.027451, 0.666667, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
text = " Defend"

[node name="TextWindow" type="MarginContainer" parent="HBoxContainer"]
margin_left = 726.0
margin_right = 1920.0
margin_bottom = 384.0
size_flags_horizontal = 3
custom_constants/margin_right = 32
custom_constants/margin_left = -9
custom_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="HBoxContainer/TextWindow"]
modulate = Color( 1, 1, 1, 0.588235 )
margin_left = -9.0
margin_right = 1162.0
margin_bottom = 364.0
custom_styles/panel = SubResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/TextWindow"]
margin_left = -9.0
margin_right = 1162.0
margin_bottom = 364.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/TextWindow/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1151.0
margin_bottom = 344.0
rect_pivot_offset = Vector2( -177, -627 )

[node name="LineStart" type="Label" parent="HBoxContainer/TextWindow/MarginContainer/HBoxContainer"]
margin_right = 35.0
margin_bottom = 56.0
rect_min_size = Vector2( 16, 0 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "#"

[node name="Label" type="Label" parent="HBoxContainer/TextWindow/MarginContainer/HBoxContainer"]
margin_left = 39.0
margin_right = 1092.0
margin_bottom = 324.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Text here"
autowrap = true
clip_text = true

[node name="LineEnd" type="Label" parent="HBoxContainer/TextWindow/MarginContainer/HBoxContainer"]
margin_left = 1096.0
margin_top = 268.0
margin_right = 1131.0
margin_bottom = 324.0
rect_pivot_offset = Vector2( 628, -90 )
size_flags_vertical = 8
custom_fonts/font = SubResource( 3 )
text = "#"

[node name="SkillWindow" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 4 )

[node name="PauseMenu" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="pressed" from="HBoxContainer/InputWindow/VBoxContainer/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="HBoxContainer/InputWindow/VBoxContainer/Defend" to="." method="_on_Defend_pressed"]
